--- a/style.css
+++ b/style.css
@@ -28,6 +28,24 @@ body {
     border-radius: 6px;
 }
 
+#game-wrapper {
+  display: grid;
+  grid-template-columns: repeat(5, 64px);
+  grid-template-rows: repeat(7, 64px);
+  gap: 3px;
+}
+
+#game-section img {
+  max-width: 100%;
+  max-height: 100%;
+  margin: 2px;
+  border: white 1px solid;
+}
+
+#game-section .noborder-tile {
+  border: none;
+}
+
 @media (max-width: 575px) {
   #cw-logo {
     max-height: 40px;
