--- a/style.css
+++ b/style.css
@@ -129,12 +129,19 @@ body {
 
 .footer-area a {
   color: #00202d;
-  font-size: 1.2em;
+  font-size: 1.3em;
   text-decoration: none;
   background: #d9f4ff;
   padding: 3px 2px;
   border-radius: 4px;
+  border: 1px solid #a8baf1;
   white-space: nowrap;
+  transition: 0.12s ease-in-out;
+}
+
+.footer-area a:hover {
+  background: #a8d8f1; 
+  border-color: #7da6e0; 
 }
 
 .btn {
@@ -169,6 +176,14 @@ body {
 
 .p_text {
     font-size: 1.2em;
+}
+
+#lastScoreMilestone, #milestoneSection {
+  font-weight: bold;
+}
+
+#lastScoreMilestone {
+  margin-bottom: 0px;
 }
 
 @media (min-width: 576px) and (max-width: 992px) {
